[tool.poetry]
name = "aiopynetdicom"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["SimonBiggs <simon.biggs@radiotherapy.ai>"]

[tool.poetry.scripts]
aiopynetdicom = "aiopynetdicom.__main__:app"

[tool.poetry.dependencies]
python = "^3.9"
pynetdicom = "^1.5.7"
ipython = "^7.26.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pylint = "^2.9.6"
mypy = "^0.910"
black = "^21.7b0"
pre-commit = "^2.14.0"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
